--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,15 @@ color: #231F20;
 margin: 4rem 0 3rem 0;
 }
 
+.page-template.page-template-template-committee h1.page-title {
+    padding:  0;
+    margin:  0;
+  }
+  .page-template.page-template-template-committee header.article-header, .committee header.article-header {
+    padding: 5rem 0 0 0;
+    margin: 0 0 3rem 0;
+  }
+
 .bg-dsa-black {
   background-color: #231F20;
 }
