--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ html, body, h1, h2, h3, h4, h5, p, .tribe-common { font-family: Roboto,-apple-sy
 	--color-white: #ffffff;
 	--color-red: #ec1f27;
 	--color-red2: #ff1744;
+  --color-lightgray:  #ececec;
 }
 
 /************************************************
@@ -294,7 +295,7 @@ margin: 4rem 0 3rem 0;
 }
 
 .bg-light {
-  background-color: #fafafa;
+  background-color: var(--color-lightgray);
 }
 
 .txt-white {
@@ -988,8 +989,8 @@ h1.home-title {
   margin-bottom: 1rem;
   margin-top: 1rem;
   padding: 1rem;
-  box-shadow: 0px 2px 4px 2px rgba(0,0,0,0.15);
-  border: 1px solid rgba(0,0,0,0.15);
+  box-shadow: 2px 4px 12px rgba(0,0,0,.08);
+  border: 1px solid rgb(200,200,200);
   background-color: #fff;
 }
 
