Updates to README.md and Theme style.css Description

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*****************************************************************
-Theme Name: Seattle Democratic Socialists of America 2019
+Theme Name: DSA Wordpress
 Theme URI: https://github.com/SeattleDSA/dsa_wordpress
-Description: Designed by the Design & Communications Team at the Seattle Democratic Socialists of America. Developed using Joints WP, a barebones theme making use of Foundation 6 for Sites.
-Author: Seattle Democratic Socialists of America (based on Joints WP)
+Description: Designed by the Design & Communications Team at the Seattle Democratic Socialists of America. A fork of Joints WP, a barebones theme making use of Foundation 6 for Sites. Suitable for any group with DSA.
+Author: Seattle Democratic Socialists of America
 Author URI: https://github.com/SeattleDSA/dsa_wordpress
 Version: 4.0
 License: GNU General Public License & MIT
